objects/APTS_SalesAreaConfigUser__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <formula>TEXT(APTS_SAP_SalesAreaConfiguration__r.APTS_Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_SalesAreaConfiguration__c</fullName>
        <label>SAP Sales Area Configuration</label>
        <referenceTo>APTS_SAP_SalesAreaConfiguration__c</referenceTo>
        <relationshipLabel>Sales Area Config Users</relationshipLabel>
        <relationshipName>APTS_SalesAreaConfigUsers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_SalesUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APTS_SalesAreaConfigUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Area Config User</label>
    <nameField>
        <displayFormat>SACU-{00000000}</displayFormat>
        <label>Sales Area Config User #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Area Config Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>